--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "http-server": "^0.12.1"
+    "@babel/core": "7.7.7",
+    "@babel/plugin-proposal-class-properties": "7.7.4",
+    "http-server": "0.12.0",
+    "rollup": "1.27.14",
+    "rollup-plugin-babel": "4.3.3",
+    "rollup-plugin-terser": "5.3.0"
   },
   "scripts": {
     "start": "http-server ./"
