--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "rollup-plugin-terser": "5.3.0"
   },
   "scripts": {
-    "start": "http-server ./"
+    "start": "http-server ./",
+    "build": "npm run build:dev && npm run build:prod",
+    "build:dev": "rollup --config rollup/rollup.config.dev.js",
+    "build:prod": "rollup --config rollup/rollup.config.prod.js"
   },
   "author": "Richie Casto (https://github.com/rcasto)",
   "license": "MIT"
