project improvements and alignment

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "rollup-plugin-terser": "5.3.0"
   },
   "scripts": {
-    "start": "http-server ./",
+    "start": "npm run start:server && npm run start:dev",
+    "start:server": "http-server ./ &",
+    "start:dev": "npm run build:dev -- --watch &",
     "build": "npm run build:dev && npm run build:prod",
     "build:dev": "rollup --config rollup/rollup.config.dev.js",
     "build:prod": "rollup --config rollup/rollup.config.prod.js"
