--- a/package.json
+++ b/package.json
@@ -21,5 +21,15 @@
     "build:prod": "rollup --config rollup/rollup.config.prod.js"
   },
   "author": "Richie Casto (https://github.com/rcasto)",
+  "homepage": "https://github.com/rcasto/social-contact#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rcasto/social-contact.git"
+  },
+  "keywords": [
+    "social",
+    "social network",
+    "contact card"
+  ],
   "license": "MIT"
 }
