--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@babel/core": "7.9.6",
     "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@rollup/plugin-image": "2.0.4",
     "http-server": "0.12.3",
     "rollup": "2.8.2",
     "rollup-plugin-babel": "4.4.0",
