--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
     "@babel/plugin-proposal-class-properties": "7.8.3",
     "@rollup/plugin-image": "2.0.4",
     "http-server": "0.12.3",
+    "npm-run-all": "4.1.5",
+    "rimraf": "3.0.2",
     "rollup": "2.8.2",
     "rollup-plugin-babel": "4.4.0",
     "rollup-plugin-terser": "5.3.0"
   },
   "scripts": {
-    "start": "npm run start:server && npm run start:dev",
-    "start:server": "http-server ./ &",
-    "start:dev": "npm run build:dev -- --watch &",
-    "build": "npm run build:dev && npm run build:prod",
+    "start": "npm-run-all clean --parallel start:server start:dev",
+    "start:server": "http-server ./",
+    "start:dev": "npm run build:dev -- --watch",
+    "build": "npm-run-all clean --parallel build:*",
     "build:dev": "rollup --config rollup/rollup.config.dev.js",
     "build:prod": "rollup --config rollup/rollup.config.prod.js",
-    "prepublish": "npm run build"
+    "clean": "rimraf dist",
+    "prepublishOnly": "npm run build"
   },
   "author": "Richie Casto (https://github.com/rcasto)",
   "homepage": "https://github.com/rcasto/social-contact#readme",
