--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "devDependencies": {
     "@babel/core": "7.9.6",
     "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@rollup/plugin-babel": "5.0.0",
     "@rollup/plugin-image": "2.0.4",
     "http-server": "0.12.3",
     "npm-run-all": "4.1.5",
     "rimraf": "3.0.2",
     "rollup": "2.8.2",
-    "rollup-plugin-babel": "4.4.0",
     "rollup-plugin-terser": "5.3.0"
   },
   "scripts": {
