--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "7.10.4",
+    "@babel/core": "7.10.5",
     "@babel/plugin-proposal-class-properties": "7.10.4",
     "@babel/preset-env": "7.10.4",
     "@rollup/plugin-babel": "5.1.0",
@@ -13,7 +13,8 @@
     "http-server": "0.12.3",
     "npm-run-all": "4.1.5",
     "rimraf": "3.0.2",
-    "rollup": "2.21.0",
+    "rollup": "2.22.1",
+    "rollup-plugin-html": "0.2.1",
     "rollup-plugin-terser": "6.1.0"
   },
   "scripts": {
